...
        ErrorState metricsErrorState, 
        BoulderingRouteModel? hardestBoulderingRoute
        ) = MetricsService.getHardestRoute(boulderingRouteList);
      
      if (metricsErrorState.isNull() && hardestBoulderingRoute != null) {
        text = Text(
          key: Key('hardestRouteText'),
          'Difficulty rating: V${hardestBoulderingRoute.officialDifficultyRating}',
          style: Theme.of(context).textTheme.titleLarge
        );
      } else if (metricsErrorState.state == MetricsError.boulderingWallListEmpty) {
        text = Text(
          'No route archived',
...
              ),
            ),
            
            Padding(
              padding: EdgeInsets.symmetric(vertical: padding),
              child: SizedBox(
                key: Key('totalBarChart'),
                height: width,
                width: width,
                child: MetricsService.createBarChart(
                  context: context,
                  boulderingRouteList: boulderingRouteList
                ),
...
              ),
            ),

            Padding(
              padding: EdgeInsets.symmetric(vertical: padding),
              child: SizedBox(
                key: Key('yearBarChart'),
                height: width,
                width: width,
                child: MetricsService.createYearBarChart(
                  context: context,
                  boulderingRouteList: boulderingRouteList,
                  dateList: dateList
...
            ),
          ),

          Padding(
            padding: EdgeInsets.symmetric(vertical: padding),
            child: SizedBox(
              key: Key('monthBarChart'),
              height: width,
              width: width,
              child: MetricsService.createMonthBarChart(
                context: context,
                boulderingRouteList: boulderingRouteList,
                dateList: dateList
...
            ),
          ),

          Padding(
            padding: EdgeInsets.symmetric(vertical: padding),
            child: SizedBox(
              key: Key('radarChart'),
              height: width,
              width: width,
              child: MetricsService.createRadarChart(
                context: context,
                boulderingRouteList: boulderingRouteList
              ),
...
      return Column(
        children: [
          
          Padding(
            padding: EdgeInsets.symmetric(vertical: padding),
            child: SizedBox(
              key: Key('pieChart'),
              height: width,
              width: width,
              child: PieChartWidget(
                boulderingRouteList: boulderingRouteList
              ),
            )
...
            ),
          ),

          Padding(
            padding: EdgeInsets.symmetric(vertical: padding),
            child: SizedBox(
              key: Key('lineChart'),
              height: width,
              width: width,
              child: MetricsService.createProgressLineChart(
                context: context,
                boulderingRouteList: boulderingRouteList,
                dateList: dateList
...
          context: context, 
          archiveErrorState: archiveErrorState,
          boulderingRouteList: boulderingRouteList,
          dateList: dateList
        )
      ),
      bottomNavigationBar: PrimaryBottomNaviagtionBar(),
    );
  }
}

