...
        registrationRoute: (context) => const RegisterView(key: ValueKey('RegisterView')),
        emailVerificationRoute: (context) => const EmailVerificationView(key: ValueKey('EmailVerificationView')),        
        //----------------------------------------------------------------------------------------------------------------------
        

        //  PROJECT LIBRARY-----------------------------------------------------------------------------------------------------
        projectLibraryListRoute: (context) => const ProjectLibraryListView(key: ValueKey('ProjectLibraryListView')),
        projectLibraryRoute: (context) => const ProjectLibraryView(key: ValueKey('ProjectLibraryView')),
        //----------------------------------------------------------------------------------------------------------------------
        

        //  DATABASE------------------------------------------------------------------------------------------------------------
        databaseLoadingRoute: (context) => const DatabaseLoadingView(key: ValueKey('DatabaseLoadingView')),
        //----------------------------------------------------------------------------------------------------------------------
...
        //  METRICS-------------------------------------------------------------------------------------------------------------
        metricListRoute: (context) => const MetricListView(key: ValueKey('MetricListView')),
        //----------------------------------------------------------------------------------------------------------------------
        
        
        //  BOULDERING WALL-----------------------------------------------------------------------------------------------------
        boulderingWallListRoute: (context) => const BoulderingWallListView(key: ValueKey('BoulderingWallListView')),
        boulderingWallRoute: (context) => const BoulderingWallView(key: ValueKey('BoulderingWallView')),
        boulderingWallSearchResultRoute: (context) => const BoulderingWallSearchResultView(key: ValueKey('BoulderingWallSearchResultView')),
        qrScannerRoute: (context) => const QrScannerView(key: ValueKey('QRScannerView')),
        //----------------------------------------------------------------------------------------------------------------------


        //  BOULDERING ROUTE----------------------------------------------------------------------------------------------------
        boulderingRouteRoute: (context) => const BoulderingRouteView(key: ValueKey('BoulderingRouteView')),
...
