...

          Align(
            alignment: Alignment(0,-0.3),
            child: FractionallySizedBox(
              widthFactor: 0.9,
              child: standardTextField(
                key: Key('emailTextField'),
                controller: _emailController, 
                errorText: _emailErrorText, 
                labelText: 'Email'
              ),
            ),
          ),

          Align(
            alignment: Alignment(0,0),
            child: FractionallySizedBox(
              widthFactor: 0.9,
              child: standardTextField(
                key: Key('passwordTextField'),
                controller: _passwordController,
                obscureText: true, 
                errorText: _passwordErrorText, 
                labelText: 'Password'
              ),
            ),
          ),

          Align(
            alignment:  Alignment(0.85,0),
            child: IconButton(
              key: Key('loginIconButton'),
              onPressed: () async {

                setState(() {
                  _isLoading = true;
                });

...
